# telemetry-system

./: .gitignore  .travis.yml  CMakeLists.txt  OpeOCD_JLink_f4.cfg  OpeOCD_ST-Link_f4.cfg  README.md  STM32F405RGTx_FLASH.ld
.github/workflows/: build_project-arm64-local.yml  build_project-local-host-arm.yml  build_project.yml  cloud.yml  cmake.yml  local-host.yml
Drivers/CMSIS/Include/: arm_math.h
src/3rd-partry/: README.md
src/3rd-partry/FatFs/src/: ff.c
src/3rd-partry/FatFs/src/option/: ccsbcs.c  syscall.c
src/3rd-partry/FreeRTOS/CMSIS_RTOS/: cmsis_os.c  cmsis_os.h
src/3rd-partry/bq25895/: bq2589x_charger.h
src/3rd-partry/cli/: cli.c  cli.h  cli_config.h  cli_io.c  cli_io.h
src/3rd-partry/cli/lib/: cli_time.c  cli_time.h
src/3rd-partry/ssd1306/: ssd1306.h  ssd1306_defines.h
src/components/: README.md
src/components/cli/: cli.c  cli_config.h
src/components/cli/lib/: cli_input.c  cli_input.h
src/components/cli/ulog/: ulog.c  ulog.h
src/components/dfu/: dfu.c  dfu.h
src/components/minmea/: minmea.c  minmea.h
src/components/ssd1306/: ssd1306.c
src/components/sx1276/: radio.h  sx1276-board.h  sx1276.c  sx1276.h
src/ground_station/: FreeRTOSConfig.h  device_global_irq.c  device_hardware_def.h  main.c  main.h  pcb_test.c  range_test.c  range_test.h  sx1276-board.c
src/ground_station/device/: ffconf.h  hardware_init.c  hardware_init.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_it.h  usb_device.h  usbd_desc.h
src/ground_station/stm32_hal_config/: bsp_driver_sd.c  bsp_driver_sd.h  stm32f4xx_hal_conf.h  usbd_conf.c  usbd_conf.h
src/mcu_module/: device_global_irq.c  main.c  main.h  range_test.c
src/mcu_module/device/: ffconf.h  hardware_init.c  hardware_init.h  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_it.h  usbd_cdc_if.c  usbd_cdc_if.h
src/mcu_module/services/: data_struct_def.h
src/mcu_module/services/gps/: gps_service.c  gps_service.h
src/mcu_module/services/range_test/: range_test.c  range_test.h
src/mcu_module/services/sd_card/: sd_card.c  sd_cli_cmd.c
src/servo_module/: main.c  main.h
src/servo_module/device/: stm32f4xx_it.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
src/servo_module/stm32_hal_config/: stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_it.h  usbd_cdc_if.h
src/tx_module/: FreeRTOSConfig.h  device_global_irq.c  device_hardware_def.h  main.c
src/tx_module/device/: bsp_driver_sd.c  bsp_driver_sd.h  hardware_init.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  usbd_cdc_if.c  usbd_conf.h
src/tx_module/services/: data_struct_def.h
src/tx_module/services/E19_lora_modem/: sx1276-board.c
src/tx_module/services/gps/: gps_service.c
src/tx_module/services/range_test/: range_test.c
src/tx_module/services/sd_card/: sd_card.c  sd_card.h  sd_cli_cmd.c  sd_cli_cmd.h  sd_logger.c  sd_logger.h
src/tx_module/stm32_hal_config/: ffconf.h  hardware_init.c  stm32f4xx_hal_msp.c  usbd_cdc_if.c
